--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2032%2032'%3E%3Ccircle%20cx='16'%20cy='16'%20r='16'%20fill='white'/%3E%3Cpath%20d='M8%2016c3.6-4.4%208.6-4%2012-1%201.6%201.6%203.4%201.8%205%202%200.6%200%201.2%200%201.8%200.2%200.4%200.2%200.6%200.4%200.8%200.6s0.2%200.8%200.2%201.2c0%200.8-0.4%201.4-1.2%201.8-0.8%200.4-1.6%200.4-2.4%200.6-0.8%200.2-1.6%200.2-2.4%200.2-0.6%200-1.2-0.2-1.8-0.4-1.6-0.8-3.2-2.2-5.4-3.6-1.6-1-4-1.2-6-1.2%200.4%201.8%200.6%203.6%200%205.2z'%20fill='black'/%3E%3C/svg%3E" />
+
+
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Nike</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
